Automatically backed up by Learn

--- a/index.html
+++ b/index.html
@@ -91,11 +91,11 @@
       </address>
 
       <!-- Replace the following div with a details tag -->
-      <details>
+      <summary>
         <!-- Replace the following span with a summary tag -->
         <span>&copy; 2014 Exceptional Realty.</span>
         <p>All Rights Reserved.</p>
-      </details>
+      </summary>
     </footer>
 
   </body>
